# newsdk

newsdk/: CMakeLists.txt
newsdk/FitPower/: CMakeLists.txt  Kconfig  prj.conf
newsdk/FitPower/child_image/: hci_rpmsg.conf
newsdk/FitPower/src/: ble_transfer.c  main.c  sample.c  sample.h
newsdk/FitPower_cali/: CMakeLists.txt  prj.conf
newsdk/FitPower_cali/boards/: ubx_evknorab10_nrf5340_cpuapp.overlay
newsdk/FitPower_cali/src/: main.c  sample.c
newsdk/FitPower_sensor/: prj.conf
newsdk/FitPower_test/: prj.conf
newsdk/Poweroff/: CMakeLists.txt  Kconfig  prj.conf
newsdk/bare_ble/: CMakeLists.txt  prj.conf
newsdk/blank/: Kconfig  prj.conf
newsdk/blinky/: prj.conf
newsdk/blog_lowpower/: CMakeLists.txt  prj.conf
newsdk/blog_lowpower (1)/: sample.yaml
newsdk/calibration/: prj.conf
newsdk/debug/: prj.conf
newsdk/debug_spi/: CMakeLists.txt  prj.conf
newsdk/extra_tx_pwr/: prj.conf
newsdk/fitmeter/: CMakeLists.txt
newsdk/fitmeter/boards/: ubx_evknorab10_nrf5340_cpuapp.overlay
newsdk/fitmeter/src/: main.c
newsdk/fota/: prj.conf
newsdk/hci_rpmsg/: prj.conf
newsdk/peripheral_uart/: Kconfig  README.rst  prj.conf  prj_minimal.conf  ubx_evknorab10_nrf5340.overlay
newsdk/power_opt/: prj.conf
newsdk/sensor/: CMakeLists.txt  Kconfig  prj.conf
newsdk/sensors/: CMakeLists.txt  Kconfig  README.rst  prj.conf
newsdk/sensors/boards/: nrf5340dk_nrf5340_cpuapp.overlay  ubx_evknorab10_nrf5340_cpuapp.overlay
newsdk/sensors/child_image/: mcuboot.conf  netboot.conf
newsdk/sensors/src/: main.c
newsdk/watchdog/: prj.conf
(+66 files in other folders)
